k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/seleorplatform_saleor-backend-tier: "true"
        io.kompose.service: api
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: api
        imagePullPolicy: ""
        name: api
        ports:
        - containerPort: 8000
        resources: {}
        volumeMounts:
        - mountPath: /app/saleor
          name: api-claim0
        - mountPath: /app/templates
          name: api-claim1
        - mountPath: /app/tests
          name: api-claim2
        - mountPath: /app/media
          name: saleor-media
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: api-claim0
        persistentVolumeClaim:
          claimName: api-claim0
      - name: api-claim1
        persistentVolumeClaim:
          claimName: api-claim1
      - name: api-claim2
        persistentVolumeClaim:
          claimName: api-claim2
      - name: saleor-media
        persistentVolumeClaim:
          claimName: saleor-media
status: {}
