k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/seleorplatform_saleor-backend-tier: "true"
        io.kompose.service: redis
    spec:
      containers:
      - image: library/redis:5.0-alpine
        imagePullPolicy: ""
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: seleorplatform-saleor-redis
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: seleorplatform-saleor-redis
        persistentVolumeClaim:
          claimName: seleorplatform-saleor-redis
status: {}
