k8s/storefront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: storefront
  name: storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: storefront
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: storefront
    spec:
      containers:
      - args:
        - npm
        - start
        - --
        - --host
        - 0.0.0.0
        image: storefront
        imagePullPolicy: ""
        name: storefront
        ports:
        - containerPort: 3000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
