k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/seleorplatform_saleor-backend-tier: "true"
        io.kompose.service: worker
    spec:
      containers:
      - args:
        - celery
        - -A
        - saleor
        - worker
        - --app=saleor.celeryconf:app
        - --loglevel=info
        image: worker
        imagePullPolicy: ""
        name: worker
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
